--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <summary>&copy; 2014 Exceptional Realty.</summary>
         <p>All Rights Reserved.</p>
       </details>
+    </footer>
     </main>
 
   </body>
